src/BlazorServer1/blazorserver1.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blazorserver1
spec:
  replicas: 5
  selector:
    matchLabels:
      app: blazorserver1  
  template:
    metadata:
      labels:
        app: blazorserver1
    spec:
      volumes:
        - name: dataprotection
          persistentVolumeClaim:
            claimName: dataprotection-claim
      containers:
      - name: blazorserver1
        image: localhost:5000/blazorserver1
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
          - name: dataprotection
            mountPath: /var/blazorserver1/dataprotection
            readOnly: false
