src/BlazorServer1/blazorserver1.service.yml
apiVersion: v1
kind: Service
metadata:
  name: blazorserver1
spec:
  type: ClusterIP
  selector:
    app: blazorserver1
  ports:  
  - port: 80
    targetPort: 80
