src/BlazorServer1/blazorserver1.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blazorserver1
  labels:
    name: blazorserver1
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "affinity"
    nginx.ingress.kubernetes.io/session-cookie-expires: "14400"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "14400"
spec:
  ingressClassName: nginx
  rules:
  - host: "localdev.me"
    http:      
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: blazorserver1
            port: 
              number: 80
